--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "mongoose": "^8.0.2",
     "nodemon": "^3.0.1"
   }
 }
